--- a/tea.yaml
+++ b/tea.yaml
@@ -1,1 +1,7 @@
+# https://tea.xyz/what-is-this-file
+---
+version: 1.0.0
+codeOwners:
+  - '0x333De0228B73FF60dd8e840357B81c936F8158C6'
+quorum: 1
 
